--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "devDependencies": {
     "@types/chokidar": "^2.1.3",
     "@types/luaparse": "^0.2.10",
+    "@types/node": "^20.6.2",
     "bun-types": "^1.0.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@types/node": "^20.6.0",
     "chokidar": "^3.5.3",
-    "cli-program-lib": "0.0.30",
     "dependency-graph": "^0.11.0",
     "luaparse": "^0.3.1",
     "node-svn-ultimate": "^1.2.1",
+    "reflect-metadata": "^0.1.13",
     "simple-git": "^3.19.1"
   }
 }
