--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
 	  "allowImportingTsExtensions": true,
 	  "moduleDetection": "force",
 	  "experimentalDecorators": true,
+	  "emitDecoratorMetadata": true,
   
 	  "jsx": "react-jsx", // support JSX
 	  "allowJs": true, // allow importing `.js` from `.ts`
