--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wowlua",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Compiler and package manager for wow addons.",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
